--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -267,7 +267,7 @@ a:hover {
 
   .pickup-category, .pickup-brand {
     background-color: #f8f8f8;
-    padding: 60px 0px;
+    padding: 10px 0px 30px 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
