--- a/app/views/devise/registrations/new_destination.html.haml
+++ b/app/views/devise/registrations/new_destination.html.haml
@@ -2,17 +2,6 @@
   .new-header
     .new-header__title
       = link_to image_tag(src="logo.png", size: "140x40"), root_path
-    -# .new-header__progress
-    -#   %ol
-    -#     %li.new-header__progress__text--active{ id: "first" }
-    -#       会員情報
-    -#       .new-header__progress__round--red
-    -#     %li.new-header__progress__text
-    -#       お届け先住所入力
-    -#       .new-header__progress__round    
-    -#     %li.new-header__progress__text{ id: "end" }
-    -#       完了
-    -#       .new-header__progress__round 
   .main
     .main__box
       .main__title
@@ -38,13 +27,11 @@
               = f.label :郵便番号
               %span.field__label__attention 必須
             .field__box
-              = f.text_field :postal_code, {placeholder:"例) 123-4567"}
+              = f.text_field :postal_code, {placeholder:"例) 1234567"}
           .field
             .field__label
               = f.label :都道府県
               %span.field__label__attention 必須
-            .field__box
-              -# = f.text_field :prefecture_id, {placeholder:"例) 北海道"}
             .select-box
               = f.collection_select :prefecture_id, Prefecture.all, :id, :name, {prompt: "選択してください"}, class:"frame"
           .field
