--- a/app/views/cards/_put-up.html.haml
+++ b/app/views/cards/_put-up.html.haml
@@ -1,5 +1,1 @@
-%a{href: '/items/new', class: "display"}
-  .display__text
-    出品する
-  .display__link
-    = image_tag 'icon_camera.png', class: 'image', width: '70px', height: '70px'
+= link_to image_tag(src='icon_camera.png', size: "70x70"), new_item_path, class: "display"
