--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,19 +1,22 @@
-.AccountPage
-  .AccountPage__title
-    %h2 Edit Account
-    %h5 アカウントの編集
-    = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'Button'
-    = link_to "トップページに戻る", :back, class: 'Button'
-  .AccountPage__form
-    = form_for(current_user) do |f|
-      .FormField
-        .FormField__label--normal
-          = f.label :name
-        .FormField__input--normal
-          = f.text_field :name, autofocus: true
-      .FormField
-        .FormField__label--normal
-          = f.label :email
-        .FormField__input--normal
-          = f.email_field :email
-      = f.submit "Update", class: 'Button UserButton'
+= render "put-up"
+
+.my-page
+  = render "header"
+  
+  .my-page__main
+    .my-page__main__left
+      = link_to "トップページ", root_path, class: "link"
+      = link_to "マイページ", user_path(current_user.id), class: "link"
+      = link_to "プロフィール", root_path, class: "link"
+      = link_to "送付先住所情報", root_path, class: "link"
+      = link_to "メール/パスワード", edit_user_path(current_user.id), class: "link select"
+      = link_to "クレジットカード情報", cards_path, class: "link"
+      = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "link"
+    .my-page__main__center
+      .title
+        ログイン情報
+      .form
+        Edit
+          
+  = render "footer"
+  
