--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -20,7 +20,7 @@ a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  &__text {
+  .text {
     font-size: 20px;
     color: white;
   }
