--- a/app/views/cards/_put-up.html.haml
+++ b/app/views/cards/_put-up.html.haml
@@ -1,1 +1,4 @@
-= link_to image_tag(src='icon_camera.png', size: "70x70"), new_item_path, class: "display"
+= link_to new_item_path, class: "display" do
+  = image_tag "icon_camera.png", width: '70px', height: '70px'
+  .text
+    出品する
