--- a/app/assets/stylesheets/items/purchases.scss
+++ b/app/assets/stylesheets/items/purchases.scss
@@ -54,9 +54,12 @@
           .item-price{
             text-align: center;
             margin-top: 40px;
+            margin-left: 70px;
             font-size: 18px;
+            display: flex;
             .price{
               font-weight: bold;
+              display: flex;
             }
           }
         }
@@ -66,14 +69,18 @@
       display: flex;
       height: 130px;
       width: 410px;
-      justify-content: space-around;
       align-items: center;
+      justify-content: center;
       font-size: 24px;
       font-weight: bold;
       border-bottom: 1px solid #f4f4f4;
       color: #333333;
       .title{
         font-weight: bold;
+      }
+      .icon{
+        margin-left: 100px;
+        margin-right: 10px;
       }
     }
     .card-box{
@@ -86,7 +93,9 @@
       padding-left: 10px;
       .content{
         .title{
-          margin-bottom: 10px;
+          margin-bottom: 20px;
+          color: #333333;
+          font-size: 16px;
         }
         .card-btn{
           text-decoration: none;
@@ -123,6 +132,22 @@
       padding: 9px 150px;
       border-radius: 3px;
       font-size: 24px;
+    }
+    .notice{
+      width: 400px;
+      margin: 20px;
+      color: #FF0211;
+    }
+    .not-btn{
+      border-radius: 3px;
+      font-size: 24px;
+      height: 54px;
+      width: 400px;
+      background-color: #cccccc;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #888888;
     }
   }
   .footer-logo{
