--- a/app/views/items/_main.html.haml
+++ b/app/views/items/_main.html.haml
@@ -1,7 +1,8 @@
-= link_to new_item_path, class: "display" do
-  = image_tag "icon_camera.png", width: '70px', height: '70px'
-  .text
-    出品する
+- if current_user
+  = link_to new_item_path, class: "display" do
+    = image_tag "icon_camera.png", width: '70px', height: '70px'
+    .text
+      出品する
 
 .main
   .image-top
