--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -3,7 +3,7 @@
     = link_to image_tag(src='logo.png', size: "200x55"), root_path
 
   .main
-    = form_with model: @item, class: :form, local: true do |f|
+    = form_with model: @item, class: :main__form, local: true do |f|
       .top
         .top__image
           .top__image__title
