--- a/app/assets/stylesheets/users/user.scss
+++ b/app/assets/stylesheets/users/user.scss
@@ -37,6 +37,9 @@ body {
       padding: 40px 40px 64px;
     }
 
+    .new_destination {
+      padding-bottom: 50px;
+    }
     .box {
       max-width: 343px;
       margin: 0 auto;
