--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "slick-theme"; 
 @import "slick";
 @import "items/purchases";
+@import "items/purchased";
 
 .notifications {
   color: white;
