--- a/app/views/items/cardnew.html.haml
+++ b/app/views/items/cardnew.html.haml
@@ -1,6 +1,7 @@
 .newpage
   .header-logo
-    = image_tag 'logo.png', height: '50px', width: '185px'
+    = link_to root_path do
+      = image_tag 'logo.png', height: '50px', width: '185px'
   .card-main
     .card-content
       .title
