--- a/app/views/items/purchase_confirmation.html.haml
+++ b/app/views/items/purchase_confirmation.html.haml
@@ -1,6 +1,7 @@
 .newpage
   .header-logo
-    = image_tag 'logo.png', height: '50px', width: '185px'
+    = link_to root_path do
+      = image_tag 'logo.png', height: '50px', width: '185px'
   - if @item.buyer_id.present?
     .buy-main
       .buy-contents
@@ -77,5 +78,6 @@
         - else
           .notice クレジットカードの登録をしてください。
           .not-btn 購入する
+  
   .footer-main
     =image_tag 'logo-white.png',height: '50px', width: '185px',class:"footer-logo"
