--- a/app/assets/stylesheets/users/user.scss
+++ b/app/assets/stylesheets/users/user.scss
@@ -1,11 +1,10 @@
-body {
+.form {
+  padding: 0 0 150px;
+  display: block;
   background: whitesmoke;
   display: block;
   font-family: 'Source Sans Pro', Helvetica , Arial, 'æ¸¸ã‚´ã‚·ãƒƒã‚¯ä½“', 'YuGothic', 'ãƒ¡ã‚¤ãƒªã‚ª', 'Meiryo', sans-serif;;
   color: #333333;
-}
-.form {
-  padding: 0 0 150px;
   .new-header {
     height: 128px;
     text-align: center;
@@ -78,9 +77,13 @@ body {
           line-height: 1.5;
           font-size: 16px;
           }
+          .field_with_errors {
+            display: contents;
+          }
           .half {
             width: calc(50% - 6px);
           }
+
         }
         .year, .month, .day {
           width: 76px;
