--- a/app/views/users/_link.html.haml
+++ b/app/views/users/_link.html.haml
@@ -3,6 +3,6 @@
 = link_to "お気に入り一覧",  item_likes_path(current_user.id), method: :get, class: "link"
 = link_to "プロフィール", root_path, class: "link"
 = link_to "送付先住所情報", root_path, class: "link"
-= link_to "メール/パスワード", edit_user_path(current_user.id), class: "link"
+= link_to "ニックネーム/メール", edit_user_path(current_user.id), class: "link"
 = link_to "クレジットカード情報", cards_path, class: "link select"
 = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "link"
