--- a/app/views/likes/index.html.haml
+++ b/app/views/likes/index.html.haml
@@ -1,8 +1,15 @@
 .card
-  = render "cards/header"
+  = render "users/header"
   .card__main
     .card__main__left
-      = render "cards/link"
+      = link_to "トップページ", root_path, class: "link"
+      = link_to "マイページ", user_path(current_user.id), class: "link"
+      = link_to "お気に入り一覧",  item_likes_path(current_user.id), method: :get, class: "link select"
+      = link_to "プロフィール", root_path, class: "link"
+      = link_to "送付先住所情報", root_path, class: "link"
+      = link_to "メール/パスワード", edit_user_path(current_user.id), class: "link"
+      = link_to "クレジットカード情報", cards_path, class: "link"
+      = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "link"
     .card__main__right
       .title
         お気に入り一覧
@@ -23,4 +30,4 @@
         .notlike
           .content お気に入りがありません
 
-  = render "cards/footer"
+  = render "users/footer"
