--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -16,7 +16,7 @@
     .my-page__main__center
       .title
         ログイン情報
-      .form
+      .edit_form
         = form_for(current_user) do |f|
           .FormField
             .FormField__label_name
