--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -123,17 +123,17 @@
           }
         }
       }
-      .form {
+      .edit_form {
         font-size: 22px;
         padding: 80px 50px 50px 50px;
         .FormField {
           padding-bottom: 10px;
           display: flex;
           &__label_name {
-            margin-right: 30px;
+            margin-right: 50px;
           }
           &__label_email {
-            padding-right: 47px;
+            padding-right: 30px;
           }
         }
         .FormButton {
