--- a/app/assets/stylesheets/items/show.scss
+++ b/app/assets/stylesheets/items/show.scss
@@ -157,7 +157,7 @@
         padding: 6px 8px;
         display: flex;
         .icon{
-          margin-top: 3px;
+          margin-bottom: 3px;
         }
       }
       .delike-btn{
@@ -169,7 +169,7 @@
         padding: 6px 8px;
         display: flex;
         .icon{
-          margin-top: 3px;
+          margin-bottom: 3px;
         }
       }
       .option-btn{
