modified flash message

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,4 +15,9 @@
 
   %body
 
+    - if current_user != nil
+      .notifications
+        - flash.each do |key, value|
+          = content_tag(:div, value, class: key)
+
     = yield
