developed edit destination page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "users/user";
-@import "users/show";
+@import "users/my_page";
+@import "users/edit_destination";
 @import "items/index";
 @import "items/new";
 @import "items/create";
