--- a/app/assets/stylesheets/users/my_page.scss
+++ b/app/assets/stylesheets/users/my_page.scss
@@ -59,8 +59,9 @@
         justify-content: center;
         .empty {
           font-size: 30px;
+          color: #cccccc;
           text-align: center;
-          padding-top: 100px;
+          padding-top: 150px;
         }
         .item {
           display: flex;
