--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "items/purchases";
 @import "items/purchased";
 @import "likes";
+@import "items/search";
 
 .notifications {
   color: white;
