--- a/app/assets/stylesheets/items/search.scss
+++ b/app/assets/stylesheets/items/search.scss
@@ -1,24 +1,22 @@
 .main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 234px;
+  display: block;
+  position: relative;
   .search {
     background-color: #f8f8f8;
-    padding: 10px 0px 30px 0px;
+    margin: 40px 50px;
+    padding: 20px;
     &__title {
-      span {
-        font-size: 28px;
-        font-weight: bold;
-        margin-bottom: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
+      font-size: 28px;
+      font-weight: 400px;
+      margin-bottom: 8px;
     }
-    &__number {
+    &__text {
+      font-size: 18px;
+      margin: 0 0 0 4px;
+    }
+    .search-number {
       font-size: 12px;
+      margin: 16px 0;
     }
 
     &__link {
@@ -30,60 +28,77 @@
         text-decoration: none;
       }
     }
-    .search-items {
-  
-    }
-    &__items {
+    .pickup {
+      background-color: #f8f8f8;
+      padding: 10px 0px 30px 0px;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 234px;
-      text-decoration: none;
-      color: black;
-      a{
-        text-decoration: none;
-        color: black;
-        .image{
-          height: 150px;
-          .sold{
-            width: 0;
-            height: 0;
-            border-top: 60px solid #3CCACE ;
-            border-right: 60px solid transparent;
-            border-bottom: 60px solid transparent;
-            border-left: 60px solid #3CCACE ;
-            z-index:100;
-            position: relative;
-            top:-154px;
-            &__inner{
-              transform: rotate(-45deg);
-              font-size: 26px;
-              margin:-35px 0px 0px -65px;
-              color: #fff;
-              letter-spacing: 2px;
-              font-weight: 600;
+      &__items {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 234px;
+        a{
+          text-decoration: none;
+          color: black;
+          margin: 0 20px 20px 0;
+          .image{
+            height: 150px;
+            .sold{
+              width: 0;
+              height: 0;
+              border-top: 60px solid #3CCACE ;
+              border-right: 60px solid transparent;
+              border-bottom: 60px solid transparent;
+              border-left: 60px solid #3CCACE ;
+              z-index:100;
+              position: relative;
+              top:-154px;
+              &__inner{
+                transform: rotate(-45deg);
+                font-size: 26px;
+                margin:-35px 0px 0px -65px;
+                color: #fff;
+                letter-spacing: 2px;
+                font-weight: 600;
+              }
             }
           }
-        }
-        .context {
-          background-color: white;
-          padding: 10px;
-          .name {
-            width: 200px;
-            word-wrap: break-word;
-            font-size: 20px;
-          }
-          .value{
-            font-size: 16px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-          }
-          .tax {
-            font-size: 10px;
+          .context {
+            background-color: white;
+            padding: 10px;
+            .name {
+              width: 200px;
+              word-wrap: break-word;
+              font-size: 20px;
+            }
+            .value{
+              font-size: 16px;
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+            }
+            .tax {
+              font-size: 10px;
+            }
           }
         }
       }
     }
-  }  
+  }
+  .new-footer {
+    width: 456px;
+    height: 100px;
+    margin: 0 auto;
+    text-align: center;
+      .last {
+        img {
+        border-radius: 5px;
+        }
+      }
+  }
 }
+
+
