--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
 @import "slick";
 @import "items/purchases";
 @import "items/purchased";
+@import "items/search";
 
 .notifications {
   color: white;
